Fix logo alignment

--- a/components/base/global.css
+++ b/components/base/global.css
@@ -87,7 +87,7 @@
 
     --document-margin: 4rem;    
     --symbol-stroke-width: 4px;
-    --symbol-height: 1.8rem;
+    --symbol-height: 2.2rem;
   }
 }
 
@@ -96,7 +96,6 @@
     --document-font-size-small: 2.0rem;
     --document-font-size: 3.8rem;
     --document-font-size-large: 4.8rem;
-    
-    --symbol-height: 2.1rem;
+    --symbol-height: 2.33rem;
   }
 }
